// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cause tests - correct Tiltify cause fundraising events returned 1`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/188/st-jude-esports-classic-avatar-1574702891788.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/188/st-jude-esports-classic-banner-1575307891368.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "playlive@stjude.org",
  "description": "Join Rogue, and their community, as they compete across multiple esports titles in creative and exciting challenges,  in an effort to support the kids of St. Jude Children's Research Hospital. ",
  "endsAt": "2019-12-09",
  "fundraiserGoalAmount": 50000,
  "id": 188,
  "image": Object {
    "alt": "",
    "height": 360,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/image/188/st-jude-esports-classic-image-1575308636499.jpg",
    "width": 640,
  },
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/188/st-jude-esports-classic-logo-1574870435537.png",
    "width": 100,
  },
  "message": "",
  "name": "St. Jude Esports Classic",
  "parent": Object {
    "id": 166,
    "name": "St. Jude Esports Classic",
    "slug": "st-jude-esports-classic",
  },
  "settings": Object {
    "colors": Object {
      "background": "#000000",
      "highlight": "#bf0d3e",
    },
    "headerIntro": "Join Rogue as they compete against their community and help kids battling childhood cancer.",
    "headerTitle": "St. Jude Esports Classic",
    "registrationFields": Object {
      "address": Object {
        "enabled": false,
        "position": 0,
        "required": false,
      },
      "dateOfBirth": Object {
        "enabled": false,
        "position": 3,
        "required": false,
      },
      "phoneNumber": Object {
        "enabled": false,
        "position": 5,
        "required": false,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": false,
        "position": 1,
        "required": false,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": false,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": "St. Jude PLAY LIVE is where gamers can help the kids of St. Jude Children’s Research Hospital by doing what they love-playing video games. 
",
  "slug": "st-jude-esports-classic",
  "startsAt": "2019-12-03",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": "",
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 2`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/45/st-jude-beauty-campaign-avatar-1496354618856.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/45/st-jude-beauty-campaign-banner-1496354403947.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "",
  "description": "This June, our friends in the online beauty space are helping to spread awareness and raise funds for St. Jude Children's Research Hospital. ",
  "endsAt": "2018-06-30",
  "fundraiserGoalAmount": 100000,
  "id": 45,
  "image": Object {
    "alt": "",
    "height": 360,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/image/45/st-jude-beauty-campaign-image-1496355056473.jpg",
    "width": 640,
  },
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/45/st-jude-beauty-campaign-logo-1496354612691.png",
    "width": 100,
  },
  "message": "",
  "name": "St. Jude Beauty Campaign",
  "parent": Object {
    "id": 44,
    "name": "St. Jude Beauty Campaign",
    "slug": "st-jude-beauty-campaign",
  },
  "settings": Object {
    "colors": Object {
      "highlight": "#ee3226",
    },
    "headerTitle": "Support the Kids of St. Jude",
    "registrationFields": Object {
      "address": Object {
        "enabled": false,
        "position": 0,
        "required": false,
      },
      "dateOfBirth": Object {
        "enabled": false,
        "position": 3,
        "required": false,
      },
      "phoneNumber": Object {
        "enabled": false,
        "position": 5,
        "required": false,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": false,
        "position": 1,
        "required": false,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "donorLeaderboard": Object {
        "type": "ALL",
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": false,
      },
      "preventDonationsBeforeStart": Object {
        "visible": false,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": false,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": false,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": false,
      },
    },
  },
  "shortDescription": "Donate to support the kids of St. Jude!",
  "slug": "st-jude-beauty-campaign",
  "startsAt": "2017-06-01",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": null,
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 3`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/51/smash-the-record-2017-avatar-1500488827790.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/51/smash-the-record-2017-banner-1500489120985.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": null,
  "description": "Smash The Record is a yearly Super Smash Bros. & Speedrunning charity event benefitting St. Jude Children's Research Hospital. Since 2014, STR has raised over $115,000 for St. Jude!

Create your own campaign!

The top three (3) individual organizations or influencers who raise the most money for STR 2017 before September 11th, 2017 will have their branding associated with STR 2017 (emotes/sprites included in event logo, event streams, and other areas as well)! 

Good luck with your campaign!",
  "endsAt": "2017-09-24",
  "fundraiserGoalAmount": 100000,
  "id": 51,
  "image": null,
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/51/smash-the-record-2017-logo-1500488833845.png",
    "width": 100,
  },
  "message": "",
  "name": "Smash the Record 2017",
  "parent": Object {
    "id": 22,
    "name": "Smash the Record",
    "slug": "smash-the-record",
  },
  "settings": Object {
    "headerIntro": "Help others and earn awesome rewards along the way! #STR2017",
    "headerTitle": "Smash the Record 2017",
    "registrationFields": Object {
      "address": Object {
        "enabled": false,
        "position": 0,
        "required": false,
      },
      "dateOfBirth": Object {
        "enabled": true,
        "position": 6,
        "required": true,
      },
      "phoneNumber": Object {
        "enabled": false,
        "position": 5,
        "required": false,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": false,
        "position": 1,
        "required": false,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "donorLeaderboard": Object {
        "type": "ALL",
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
      "preventDonationsBeforeStart": Object {
        "visible": false,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": false,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": null,
  "slug": "smash-the-record-2017",
  "startsAt": "2017-08-07",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": "https://www.youtube.com/watch?v=8Tr4ToXqLxE",
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 4`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/cause/avatar/35/st-jude-children-s-research-hospital-avatar-1573159170626.png",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/225/gcx-2020-banner-1576693968147.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "jason.heitman@stjude.org",
  "description": "GCX is a community based, charity event. A large community of like-hearted gamers coming together to make the world a better place. Grown at the roots in the Destiny community, we have grown and continue to grow the community, in hopes of creating a larger charitable footprint for years to come.",
  "endsAt": "2020-11-16",
  "fundraiserGoalAmount": 3000000,
  "id": 225,
  "image": Object {
    "alt": "",
    "height": 360,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/image/225/gcx-2020-image-1576694493288.jpg",
    "width": 640,
  },
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/225/gcx-2020-logo-1576695517617.png",
    "width": 100,
  },
  "message": "Thank you for fundraising for GCX 2020! We're aiming to raise $3,000,000 for the kids of St. Jude, and need all the help we can get.",
  "name": "GCX 2020",
  "parent": Object {
    "id": 200,
    "name": "GCX 2020",
    "slug": "gcx-2020",
  },
  "settings": Object {
    "headerIntro": "A community event to benefit the kids of St. Jude.",
    "headerTitle": "GCX 2020",
    "registrationFields": Object {
      "address": Object {
        "enabled": true,
        "position": 0,
        "required": true,
      },
      "dateOfBirth": Object {
        "enabled": true,
        "position": 3,
        "required": true,
      },
      "phoneNumber": Object {
        "enabled": true,
        "position": 5,
        "required": true,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": true,
        "position": 1,
        "required": true,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": false,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": "GCX is a community based, charity event. A large community of like-hearted gamers coming together to make the world a better place.",
  "slug": "gcx-2020",
  "startsAt": "2019-12-16",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": null,
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 5`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/117/guardiancon-avatar-1542749564357.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/117/guardiancon-banner-1542900446347.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "jason.heitman@stjude.org",
  "description": "GuardianCon is a community based, charity event. A large community of like-hearted gamers coming together to make the world a better place. Grown at the roots in the Destiny community, we have grown and continue to grow the community, in hopes of creating a larger charitable footprint for years to come.",
  "endsAt": "2019-11-21",
  "fundraiserGoalAmount": 3000000,
  "id": 117,
  "image": null,
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/117/guardiancon-logo-1542749551717.png",
    "width": 100,
  },
  "message": "Thank you for fundraising for GuardianCon! We're aiming to raise $3,000,000 for the kids of St. Jude, and need all the help we can get.",
  "name": "GuardianCon",
  "parent": Object {
    "id": 43,
    "name": "GuardianCon",
    "slug": "guardiancon",
  },
  "settings": Object {
    "colors": Object {
      "background": "#1d0f42",
      "highlight": "#36edfc",
    },
    "headerIntro": "A community event to benefit the kids of St. Jude.",
    "headerTitle": "GuardianCon 2019",
    "registrationFields": Object {
      "address": Object {
        "enabled": true,
        "position": 0,
        "required": true,
      },
      "dateOfBirth": Object {
        "enabled": true,
        "position": 6,
        "required": true,
      },
      "phoneNumber": Object {
        "enabled": true,
        "position": 5,
        "required": true,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": true,
        "position": 1,
        "required": false,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "donorLeaderboard": Object {
        "type": "ALL",
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
      "preventDonationsBeforeStart": Object {
        "visible": false,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": true,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": "GuardianCon is a community based, charity event. A large community of like-hearted gamers coming together to make the world a better place.",
  "slug": "guardiancon",
  "startsAt": "2018-11-22",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": "https://www.youtube.com/watch?v=dQ-W_2C6qMg",
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 6`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/50/st-jude-polls-avatar-1500330665175.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/50/st-jude-polls-banner-1500330658223.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "Daniel.Anglin@stjude.org",
  "description": "Show your fun side and help the kids of St. Jude. Poll your friends, family and co-workers to choose how you'll help end childhood cancer. For each vote, they'll make a donation to St. Jude.
 
1. **[Sign up.](https://stjude.tiltify.com/st-jude-polls/start/type)**
2. Start a new poll under INCENTIVES>POLLS
3. Outline your poll. (Shave your head, dye your hair, dress in costume, etc!)
4. Share and ask your friends to vote.
5. Once all votes are in, do your thing & post a picture or a video.",
  "endsAt": "2018-06-30",
  "fundraiserGoalAmount": 0,
  "id": 50,
  "image": null,
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/50/st-jude-polls-logo-1500330646480.png",
    "width": 100,
  },
  "message": "Thanks for creating your own St. Jude Poll! Now it’s time to get some votes! Share the poll with your friends, family, co-workers and everyone else!
 
Remember – the more votes you get, the more you’re helping St. Jude continue to find cures for childhood cancer and other life-threatening diseases!",
  "name": "St. Jude Polls",
  "parent": Object {
    "id": 48,
    "name": "St. Jude Polls",
    "slug": "st-jude-polls",
  },
  "settings": Object {
    "colors": Object {
      "background": "#ffffff",
      "highlight": "#ee3226",
    },
    "headerIntro": "Help decide how to help end childhood cancer. Vote or create your own poll today!",
    "headerTitle": "St. Jude Polls",
    "registrationFields": Object {
      "address": Object {
        "enabled": false,
        "position": 0,
        "required": false,
      },
      "dateOfBirth": Object {
        "enabled": true,
        "position": 6,
        "required": true,
      },
      "phoneNumber": Object {
        "enabled": false,
        "position": 5,
        "required": false,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": false,
        "position": 1,
        "required": false,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": false,
      },
      "donorLeaderboard": Object {
        "type": "ALL",
        "visible": true,
      },
      "endsAt": Object {
        "visible": false,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": false,
      },
      "individualLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
      "preventDonationsBeforeStart": Object {
        "visible": false,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": false,
      },
      "sustainedGiving": Object {
        "visible": false,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": false,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": "Help me decide how to help end childhood cancer. Vote in my poll now!",
  "slug": "st-jude-polls",
  "startsAt": "2017-07-17",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": "https://www.youtube.com/watch?v=oHrb_EppWag",
}
`;

exports[`cause tests - correct Tiltify cause fundraising events returned 7`] = `
Object {
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/avatar/276/playlive-avatar-1553962049542.jpg",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/banner/276/playlive-banner-1553961594251.jpg",
    "width": 1440,
  },
  "causeId": 35,
  "contactEmail": "playlive@stjude.org",
  "description": "Sign up to create your own campaign and start fundraising. Play and stream your favorite video games to raise donations and unlock exclusive loot.

### Play For More Than Bragging Rights

St. Jude has helped push the childhood cancer survival rate from less than 20% when we opened to 80% today. We won’t stop until no child dies from cancer.

### [Click here to find out more!](https://goo.gl/eYovUq)",
  "endsAt": "2021-03-31",
  "fundraiserGoalAmount": 2000000,
  "id": 276,
  "image": Object {
    "alt": "",
    "height": 360,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/image/276/playlive-image-1553961729635.jpg",
    "width": 640,
  },
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/fundraising_event/logo/276/playlive-logo-1553961912243.png",
    "width": 100,
  },
  "message": "### The 2020 St. Jude PLAY LIVE Prize Season has begun and registration is now open!

Fundraising kicks off on Friday, April 24. Set up your fundraising page now & start spreading the word!

[Click here](https://goo.gl/RKwlV2) to find out about this year’s prizes from our sponsors.

Utilize our brand new Chatbot, custom overlay tools and branded graphics to magnify your campaign [Find out more here](https://bit.ly/3bJLkhW).​

Follow @stjudeplaylive for more tips and info!",
  "name": "St. Jude PLAY LIVE",
  "parent": Object {
    "id": 39,
    "name": "St. Jude PLAY LIVE",
    "slug": "playlive",
  },
  "settings": Object {
    "colors": Object {
      "background": "#000000",
      "highlight": "#bf0d3e",
    },
    "headerIntro": "Start a campaign, play games, raise funds, win prizes and help kids battling childhood cancer.",
    "headerTitle": "St. Jude PLAY LIVE",
    "registrationFields": Object {
      "address": Object {
        "enabled": true,
        "position": 0,
        "required": true,
      },
      "dateOfBirth": Object {
        "enabled": true,
        "position": 6,
        "required": true,
      },
      "phoneNumber": Object {
        "enabled": true,
        "position": 5,
        "required": true,
      },
      "serviceHours": Object {
        "enabled": false,
        "position": 2,
        "required": false,
      },
      "shirtSize": Object {
        "enabled": true,
        "position": 1,
        "required": true,
      },
    },
    "visibilityOptions": Object {
      "donate": Object {
        "visible": true,
      },
      "donorLeaderboard": Object {
        "visible": true,
      },
      "endsAt": Object {
        "visible": true,
      },
      "fundraiserGoalAmount": Object {
        "type": "BOTH",
        "visible": true,
      },
      "individualLeaderboard": Object {
        "heat": true,
        "type": "ALL",
        "visible": true,
      },
      "preventDonationsBeforeStart": Object {
        "visible": false,
      },
      "regions": Object {
        "visible": true,
      },
      "registration": Object {
        "visible": true,
      },
      "startsAt": Object {
        "visible": true,
      },
      "sustainedGiving": Object {
        "visible": true,
      },
      "sustainedGivingStats": Object {
        "visible": false,
      },
      "teamLeaderboard": Object {
        "heat": true,
        "type": "ALL",
        "visible": true,
      },
    },
  },
  "shortDescription": "St. Jude PLAY LIVE is where gamers can help the kids of St. Jude Children’s Research Hospital by doing what they love-playing video games. Sign-up, set a goal, earn awesome prizes today!",
  "slug": "playlive",
  "startsAt": "2020-04-01",
  "status": "published",
  "totalAmountRaised": Any<Number>,
  "type": "FundraisingEvent",
  "video": "https://www.youtube.com/watch?v=kSqVRLA75co",
}
`;

exports[`cause tests - correct Tiltify cause leaderboards returned 1`] = `
Object {
  "individual": Array [
    Object {
      "amountRaised": 5381329.97,
      "name": "GuardianCon",
      "url": "/@guardiancon/profile",
    },
    Object {
      "amountRaised": 3533896.74,
      "name": "DrLupo",
      "url": "/@drlupo/profile",
    },
    Object {
      "amountRaised": 1331513.04,
      "name": "Game Theorists",
      "url": "/@game-theorists/profile",
    },
    Object {
      "amountRaised": 330193.91,
      "name": "LobosJr",
      "url": "/@lobosjr/profile",
    },
    Object {
      "amountRaised": 254812.61,
      "name": "NinjasHyper",
      "url": "/@ninjashyper/profile",
    },
    Object {
      "amountRaised": 171139.11,
      "name": "Dawko",
      "url": "/@dawko/profile",
    },
    Object {
      "amountRaised": 160560.69,
      "name": "Bloodyfaster",
      "url": "/@bloodyfaster/profile",
    },
    Object {
      "amountRaised": 157668.48,
      "name": "iKasperr",
      "url": "/@ikasperr/profile",
    },
    Object {
      "amountRaised": 137174.22,
      "name": "WTFGameNation",
      "url": "/@wtfgamenation/profile",
    },
    Object {
      "amountRaised": 115717,
      "name": "markiplier",
      "url": "/@markiplier/profile",
    },
    Object {
      "amountRaised": 111776.81,
      "name": "Jacksepticeye",
      "url": "/@jacksepticeye/profile",
    },
    Object {
      "amountRaised": 107219.66,
      "name": "TheSpeedGamers",
      "url": "/@thespeedgamers/profile",
    },
    Object {
      "amountRaised": 102378.17,
      "name": "Darkness429",
      "url": "/@darkness429/profile",
    },
    Object {
      "amountRaised": 100571.69,
      "name": "AnthonyKongphan",
      "url": "/@anthonykongphan/profile",
    },
    Object {
      "amountRaised": 100250,
      "name": "Smash The Record",
      "url": "/@smashtherecord/profile",
    },
    Object {
      "amountRaised": 97541.68,
      "name": "negaoryx",
      "url": "/@negaoryx/profile",
    },
    Object {
      "amountRaised": 97402.68,
      "name": "TradeChat",
      "url": "/@tradechat/profile",
    },
    Object {
      "amountRaised": 91078.94,
      "name": "Lowco",
      "url": "/@lowco/profile",
    },
    Object {
      "amountRaised": 73937.59,
      "name": "rxysurfchic",
      "url": "/@rxysurfchic/profile",
    },
    Object {
      "amountRaised": 72133.68,
      "name": "littlesiha",
      "url": "/@littlesiha/profile",
    },
    Object {
      "amountRaised": 69561.42,
      "name": "Terroriser",
      "url": "/@terroriser/profile",
    },
    Object {
      "amountRaised": 67291.24,
      "name": "TheOnlyRyann",
      "url": "/@theonlyryann/profile",
    },
    Object {
      "amountRaised": 66043.86,
      "name": "PatrckStatic",
      "url": "/@patrckstatic/profile",
    },
    Object {
      "amountRaised": 64108.4,
      "name": "0hmymandy",
      "url": "/@0hmymandy/profile",
    },
    Object {
      "amountRaised": 62942.07,
      "name": "St. Jude",
      "url": "/@st-jude/profile",
    },
  ],
  "team": Array [
    Object {
      "amountRaised": 344047.54,
      "name": "Team Catalyst",
      "url": "/+team-catalyst",
    },
    Object {
      "amountRaised": 306246.39,
      "name": "Clips4Kids",
      "url": "/+clips4kids",
    },
    Object {
      "amountRaised": 282077.5,
      "name": "Team Sin Squad",
      "url": "/+team-sin-squad",
    },
    Object {
      "amountRaised": 274245.58,
      "name": "Crystalium & Friends",
      "url": "/+crystalium-friends",
    },
    Object {
      "amountRaised": 193525.62,
      "name": "DerpSquad",
      "url": "/+derpsquad",
    },
    Object {
      "amountRaised": 178967.98,
      "name": "TeamVGaming",
      "url": "/+teamvgaming",
    },
    Object {
      "amountRaised": 126545.54,
      "name": "Little Miracle Makers",
      "url": "/+little-miracle-makers",
    },
    Object {
      "amountRaised": 105675.07,
      "name": "WouldYouKindly ",
      "url": "/+wouldyoukindly",
    },
    Object {
      "amountRaised": 102572.37,
      "name": "Streamfluencer",
      "url": "/+streamfluencer",
    },
    Object {
      "amountRaised": 96890.64,
      "name": "THE GOO's Metal Meal Meltdown Streamers",
      "url": "/+the-goo-s-metal-meal-meltdown-streamers",
    },
    Object {
      "amountRaised": 91079.03,
      "name": "Stream On",
      "url": "/+stream-on",
    },
    Object {
      "amountRaised": 77805.95,
      "name": "Main Menu and friends",
      "url": "/+main-menu-and-friends",
    },
    Object {
      "amountRaised": 71682,
      "name": "Main Menu x GameStop",
      "url": "/+main-menu-x-gamestop",
    },
    Object {
      "amountRaised": 63654.24,
      "name": "The Hunt 2019",
      "url": "/+the-hunt-2019",
    },
    Object {
      "amountRaised": 62110.67,
      "name": "Team Kitty",
      "url": "/+team-kitty",
    },
    Object {
      "amountRaised": 56013.66,
      "name": "TSG",
      "url": "/+tsg",
    },
    Object {
      "amountRaised": 54540.87,
      "name": "The Flagship",
      "url": "/+the-flagship",
    },
    Object {
      "amountRaised": 52005.37,
      "name": "Alienware and Friends",
      "url": "/+alienware-and-friends",
    },
    Object {
      "amountRaised": 49596.52,
      "name": "Perky Pugs",
      "url": "/+perky-pugs",
    },
    Object {
      "amountRaised": 48535.77,
      "name": "4DaKeedz",
      "url": "/+4dakeedz",
    },
    Object {
      "amountRaised": 46141.14,
      "name": "Team Ever After",
      "url": "/+team-ever-after",
    },
    Object {
      "amountRaised": 43388.36,
      "name": "Flawless Victory",
      "url": "/+flawless-victory",
    },
    Object {
      "amountRaised": 39932.29,
      "name": "Team RockSquad ",
      "url": "/+team-rocksquad",
    },
    Object {
      "amountRaised": 39723.47,
      "name": "Wookie Cookies",
      "url": "/+wookie-cookies",
    },
    Object {
      "amountRaised": 38488.14,
      "name": "Gecko Swarm",
      "url": "/+gecko-swarm",
    },
    Object {
      "amountRaised": 37055.09,
      "name": "The Storm",
      "url": "/+the-storm",
    },
    Object {
      "amountRaised": 35016,
      "name": "Team Smash The Record",
      "url": "/+team-smash-the-record",
    },
    Object {
      "amountRaised": 33975.58,
      "name": "Project Kindness",
      "url": "/+project-kindness",
    },
    Object {
      "amountRaised": 31367,
      "name": "Team Bone-In",
      "url": "/+team-bone-in",
    },
    Object {
      "amountRaised": 30419.82,
      "name": "The Mooners",
      "url": "/+the-mooners",
    },
    Object {
      "amountRaised": 30397.96,
      "name": "Team Nucleus",
      "url": "/+team-nucleus",
    },
    Object {
      "amountRaised": 29788.92,
      "name": "/r/Twitch & Community",
      "url": "/+r-twitch-community",
    },
    Object {
      "amountRaised": 29458.05,
      "name": "Gamers4Change",
      "url": "/+gamers4change",
    },
    Object {
      "amountRaised": 28479.83,
      "name": "Humble Partners & Friends",
      "url": "/+humble-partners-friends",
    },
    Object {
      "amountRaised": 26714.74,
      "name": "4 Truth, JustUs, and The Kids!",
      "url": "/+4-truth-justus-and-the-kids",
    },
    Object {
      "amountRaised": 26623.75,
      "name": "Yam Fam",
      "url": "/+yam-fam",
    },
    Object {
      "amountRaised": 26576,
      "name": "St. Jude Charity Scare-a-thon 2019",
      "url": "/+st-jude-charity-scare-a-thon-2019",
    },
    Object {
      "amountRaised": 26060,
      "name": "Team Strugglebus",
      "url": "/+team-strugglebus",
    },
    Object {
      "amountRaised": 26041.24,
      "name": "Playing with Fire TV",
      "url": "/+playing-with-fire-tv",
    },
    Object {
      "amountRaised": 25977.42,
      "name": "Good Vibes",
      "url": "/+good-vibes",
    },
    Object {
      "amountRaised": 25935.13,
      "name": "#techandjunkGIVES",
      "url": "/+techandjunkgives",
    },
    Object {
      "amountRaised": 25020,
      "name": "Just Dance for a Cause",
      "url": "/+just-dance-for-a-cause",
    },
    Object {
      "amountRaised": 24167,
      "name": "The Party",
      "url": "/+the-party",
    },
    Object {
      "amountRaised": 23948.14,
      "name": "Keys to Hearts",
      "url": "/+keys-to-hearts",
    },
    Object {
      "amountRaised": 23076.15,
      "name": "505 Games and Friends",
      "url": "/+505-games-and-friends",
    },
    Object {
      "amountRaised": 22390.17,
      "name": "Level With A Cause",
      "url": "/+level-with-a-cause",
    },
    Object {
      "amountRaised": 22013.75,
      "name": "Inception Talent",
      "url": "/+inception-talent",
    },
    Object {
      "amountRaised": 21385,
      "name": "BYOB Gaming",
      "url": "/+byob-gaming",
    },
    Object {
      "amountRaised": 20323.36,
      "name": "NonToxic Gaming",
      "url": "/+nontoxic-gaming",
    },
    Object {
      "amountRaised": 20295.55,
      "name": "Chatloaf & Friends ",
      "url": "/+chatloaf-friends",
    },
    Object {
      "amountRaised": 20161.46,
      "name": "St Jude PLAY LIVE Scare A Thon",
      "url": "/+st-jude-play-live-scare-a-thon",
    },
    Object {
      "amountRaised": 19577.34,
      "name": "Aim and Achieve Stream Team",
      "url": "/+aim-and-achieve-stream-team",
    },
    Object {
      "amountRaised": 17188,
      "name": "The Utensils",
      "url": "/+the-utensils",
    },
    Object {
      "amountRaised": 16590,
      "name": "The Legion",
      "url": "/+the-legion",
    },
    Object {
      "amountRaised": 16130,
      "name": "The Division Community",
      "url": "/+the-division-community",
    },
    Object {
      "amountRaised": 16044.06,
      "name": "The Cookout",
      "url": "/+the-cookout",
    },
    Object {
      "amountRaised": 15730.14,
      "name": "Dominos",
      "url": "/+dominos",
    },
    Object {
      "amountRaised": 15620.93,
      "name": "SteadyArmy",
      "url": "/+steadyarmy",
    },
    Object {
      "amountRaised": 15438.86,
      "name": "Center Stage",
      "url": "/+center-stage",
    },
    Object {
      "amountRaised": 15419.05,
      "name": "Hope Squadron",
      "url": "/+hope-squadron",
    },
    Object {
      "amountRaised": 15294.16,
      "name": "Content Creators United",
      "url": "/+content-creators-united",
    },
    Object {
      "amountRaised": 14805.99,
      "name": "90's Club for St. Jude ",
      "url": "/+90-s-club-for-st-jude",
    },
    Object {
      "amountRaised": 13969.37,
      "name": "Brix Haus",
      "url": "/+brix-haus",
    },
    Object {
      "amountRaised": 13821.2,
      "name": "Bearded Bastards Give",
      "url": "/+bearded-bastards-give",
    },
    Object {
      "amountRaised": 13390.7,
      "name": "STAR is for the Children 2019",
      "url": "/+star-is-for-the-children-2019",
    },
    Object {
      "amountRaised": 13387.04,
      "name": "Super Rare",
      "url": "/+super-rare",
    },
    Object {
      "amountRaised": 12235.4,
      "name": "GIRLSTREAMERS",
      "url": "/+girlstreamers",
    },
    Object {
      "amountRaised": 11997.49,
      "name": "Space Vikings",
      "url": "/+space-vikings",
    },
    Object {
      "amountRaised": 11875,
      "name": "trashsquad",
      "url": "/+trashsquad",
    },
    Object {
      "amountRaised": 11608.78,
      "name": "To Be Determined Play Live",
      "url": "/+to-be-determined-play-live",
    },
    Object {
      "amountRaised": 10843,
      "name": "Mixer Loves Little Lights",
      "url": "/+mixer-loves-little-lights",
    },
    Object {
      "amountRaised": 10707,
      "name": "The Wolf Pack",
      "url": "/+the-wolf-pack",
    },
    Object {
      "amountRaised": 10495,
      "name": "Skittle Squad",
      "url": "/+skittle-squad",
    },
    Object {
      "amountRaised": 10442.55,
      "name": "The Ebonheart Holes",
      "url": "/+the-ebonheart-holes",
    },
    Object {
      "amountRaised": 9588.19,
      "name": "The Newb Crew",
      "url": "/+the-newb-crew",
    },
    Object {
      "amountRaised": 9344.15,
      "name": "TwitchKittens Alpha",
      "url": "/+twitchkittens-alpha",
    },
    Object {
      "amountRaised": 9210.01,
      "name": "Twitch Food & Drink!",
      "url": "/+twitch-food-drink",
    },
    Object {
      "amountRaised": 8682.48,
      "name": "PlayDauntless",
      "url": "/+playdauntless",
    },
    Object {
      "amountRaised": 8360,
      "name": "Charity Streamers",
      "url": "/+charity-streamers",
    },
    Object {
      "amountRaised": 7955.69,
      "name": "The Avowed Team--77f003a7-706b-4625-8f57-9b983646ddae",
      "url": "/+the-avowed-team-77f003a7-706b-4625-8f57-9b983646ddae",
    },
    Object {
      "amountRaised": 7757,
      "name": "p90princess ",
      "url": "/+p90princess",
    },
    Object {
      "amountRaised": 7698,
      "name": "GSN Gaming & Friends",
      "url": "/+gsn-gaming-friends",
    },
    Object {
      "amountRaised": 7500,
      "name": "JOverRhythm",
      "url": "/+joverrhythm",
    },
    Object {
      "amountRaised": 7451,
      "name": "AimzAtchu Dolphin Family",
      "url": "/+aimzatchu-dolphin-family",
    },
    Object {
      "amountRaised": 7015,
      "name": "Charity Hunters",
      "url": "/+charity-hunters",
    },
    Object {
      "amountRaised": 6888,
      "name": "Positive Pineapples",
      "url": "/+positive-pineapples",
    },
    Object {
      "amountRaised": 6750,
      "name": "Versus Evil",
      "url": "/+versus-evil",
    },
    Object {
      "amountRaised": 6675,
      "name": "Sea of Streams",
      "url": "/+sea-of-streams",
    },
    Object {
      "amountRaised": 6590,
      "name": "Cup of Caring",
      "url": "/+cup-of-caring",
    },
    Object {
      "amountRaised": 6353,
      "name": "The Sly Squad",
      "url": "/+the-sly-squad",
    },
    Object {
      "amountRaised": 6190,
      "name": "TwitchUnity Dance-a-thon",
      "url": "/+twitchunity-dance-a-thon",
    },
    Object {
      "amountRaised": 6133,
      "name": "Into The AM",
      "url": "/+into-the-am",
    },
    Object {
      "amountRaised": 5805.37,
      "name": "UHC On Air",
      "url": "/+uhc-on-air",
    },
    Object {
      "amountRaised": 5800,
      "name": "The Deal Nation Femily--709cf939-4736-4b79-b317-9d2669290f13",
      "url": "/+the-deal-nation-femily-709cf939-4736-4b79-b317-9d2669290f13",
    },
    Object {
      "amountRaised": 5649,
      "name": "Retromaniacs",
      "url": "/+retromaniacs",
    },
    Object {
      "amountRaised": 5633.69,
      "name": "ZeldaUniverse",
      "url": "/+zeldauniverse",
    },
    Object {
      "amountRaised": 5613.24,
      "name": "The Aethernet & Friends Team",
      "url": "/+the-aethernet-friends-team",
    },
    Object {
      "amountRaised": 5518.31,
      "name": "Less Than Three",
      "url": "/+less-than-three",
    },
    Object {
      "amountRaised": 5278.22,
      "name": "For The Kids! Because, Why Not?",
      "url": "/+for-the-kids-because-why-not",
    },
    Object {
      "amountRaised": 5251,
      "name": "Ity Bitty Charity Team",
      "url": "/+ity-bitty-charity-team",
    },
    Object {
      "amountRaised": 5165,
      "name": "Hive Community Play Live Fundraiser ",
      "url": "/+hive-community-play-live-fundraiser",
    },
    Object {
      "amountRaised": 5136,
      "name": "Too Rad To Be Sad",
      "url": "/+too-rad-to-be-sad",
    },
    Object {
      "amountRaised": 5102.68,
      "name": "Ready Level Up",
      "url": "/+ready-level-up",
    },
    Object {
      "amountRaised": 5081,
      "name": "TwitchKittens Community",
      "url": "/+twitchkittens-community",
    },
    Object {
      "amountRaised": 5050,
      "name": "Ascend",
      "url": "/+ascend",
    },
    Object {
      "amountRaised": 5025.61,
      "name": "Companion Crew",
      "url": "/+companion-crew",
    },
    Object {
      "amountRaised": 5020,
      "name": "Tablestory",
      "url": "/+tablestory",
    },
    Object {
      "amountRaised": 4996,
      "name": "Vying for a Cure",
      "url": "/+vying-for-a-cure",
    },
    Object {
      "amountRaised": 4921,
      "name": "Team Zelse",
      "url": "/+team-zelse",
    },
    Object {
      "amountRaised": 4652.5,
      "name": "Big Heroes Helping Little Heroes",
      "url": "/+big-heroes-helping-little-heroes",
    },
    Object {
      "amountRaised": 4231.4,
      "name": "ducckkyyTV's Flock",
      "url": "/+ducckkyytv-s-flock",
    },
    Object {
      "amountRaised": 4077,
      "name": "Little Lights Brigade",
      "url": "/+little-lights-brigade",
    },
    Object {
      "amountRaised": 4000,
      "name": "Peachy Party",
      "url": "/+peachy-party",
    },
    Object {
      "amountRaised": 3915,
      "name": "The Cabbage Patch",
      "url": "/+the-cabbage-patch",
    },
    Object {
      "amountRaised": 3800.15,
      "name": "Mixer Streamers Collaborative ",
      "url": "/+mixer-streamers-collaborative",
    },
    Object {
      "amountRaised": 3629.54,
      "name": "Elite Four",
      "url": "/+elite-four",
    },
    Object {
      "amountRaised": 3621.34,
      "name": "Fade2Karma",
      "url": "/+fade2karma",
    },
    Object {
      "amountRaised": 3604,
      "name": "Kinsanity For the Kids",
      "url": "/+kinsanity-for-the-kids",
    },
    Object {
      "amountRaised": 3586.03,
      "name": "Game Over Cancer",
      "url": "/+game-over-cancer",
    },
    Object {
      "amountRaised": 3505.33,
      "name": "LAN House",
      "url": "/+lan-house",
    },
    Object {
      "amountRaised": 3404,
      "name": "Chocolate Thunder",
      "url": "/+chocolate-thunder",
    },
    Object {
      "amountRaised": 3320,
      "name": "ATL Based Destiny Community",
      "url": "/+atl-based-destiny-community",
    },
    Object {
      "amountRaised": 3306,
      "name": "Team Poppy Ellie",
      "url": "/+team-poppy-ellie",
    },
    Object {
      "amountRaised": 3288,
      "name": "Pod Gods",
      "url": "/+pod-gods",
    },
    Object {
      "amountRaised": 3171,
      "name": "The Grind",
      "url": "/+the-grind",
    },
    Object {
      "amountRaised": 3100,
      "name": "Sea of Pokemon Crew",
      "url": "/+sea-of-pokemon-crew",
    },
    Object {
      "amountRaised": 3058.3,
      "name": "Smile Squad",
      "url": "/+smile-squad",
    },
    Object {
      "amountRaised": 3033.2,
      "name": "Old Man Charity Crew",
      "url": "/+old-man-charity-crew",
    },
    Object {
      "amountRaised": 2992.58,
      "name": "World Best Gaming ",
      "url": "/+world-best-gaming",
    },
    Object {
      "amountRaised": 2944,
      "name": "Reflections",
      "url": "/+reflections",
    },
    Object {
      "amountRaised": 2862,
      "name": "Black Girl Gamers",
      "url": "/+black-girl-gamers",
    },
    Object {
      "amountRaised": 2787,
      "name": "Zeldathon Community",
      "url": "/+zeldathon-community",
    },
    Object {
      "amountRaised": 2765,
      "name": "Team B42",
      "url": "/+team-b42",
    },
    Object {
      "amountRaised": 2601,
      "name": "Misfit Toys",
      "url": "/+misfit-toys",
    },
    Object {
      "amountRaised": 2563,
      "name": "Guardians Against Childhood Illnesses ",
      "url": "/+guardians-against-childhood-illnesses",
    },
    Object {
      "amountRaised": 2537,
      "name": "Jroc's Band of Misfits",
      "url": "/+jroc-s-band-of-misfits",
    },
    Object {
      "amountRaised": 2377.84,
      "name": "Caelestis Gaming Network",
      "url": "/+caelestis-gaming-network",
    },
    Object {
      "amountRaised": 2248,
      "name": "Jeef's team of memes",
      "url": "/+jeef-s-team-of-memes",
    },
    Object {
      "amountRaised": 2215,
      "name": "The DayKnights",
      "url": "/+the-dayknights",
    },
    Object {
      "amountRaised": 2200,
      "name": "Let's Do This",
      "url": "/+let-s-do-this",
    },
    Object {
      "amountRaised": 2197,
      "name": "Akupara Games for Charity",
      "url": "/+akupara-games-for-charity",
    },
    Object {
      "amountRaised": 2185,
      "name": "DMM Team",
      "url": "/+dmm-team",
    },
    Object {
      "amountRaised": 2151,
      "name": "Ten Toes for St. Jude 2019",
      "url": "/+ten-toes-for-st-jude-2019",
    },
    Object {
      "amountRaised": 2101.37,
      "name": "GONE FULL CASUAL",
      "url": "/+gone-full-casual",
    },
    Object {
      "amountRaised": 2100,
      "name": "Used 2 Be Cool",
      "url": "/+used-2-be-cool",
    },
    Object {
      "amountRaised": 2055,
      "name": "Madcap Society",
      "url": "/+madcap-society",
    },
    Object {
      "amountRaised": 2012.09,
      "name": "Team Justus",
      "url": "/+team-justus",
    },
    Object {
      "amountRaised": 1895.3,
      "name": "Insert Team Name Here",
      "url": "/+insert-team-name-here",
    },
    Object {
      "amountRaised": 1880,
      "name": "RootMetrics",
      "url": "/+rootmetrics",
    },
    Object {
      "amountRaised": 1856,
      "name": "Positive AF St Jude",
      "url": "/+positive-af-st-jude",
    },
    Object {
      "amountRaised": 1851,
      "name": "Twitchin For Mo",
      "url": "/+twitchin-for-mo",
    },
    Object {
      "amountRaised": 1820.27,
      "name": "Ben and Nick's Service project",
      "url": "/+ben-and-nick-s-service-project",
    },
    Object {
      "amountRaised": 1813.11,
      "name": "Players vs Cancer",
      "url": "/+players-vs-cancer",
    },
    Object {
      "amountRaised": 1750,
      "name": "God Mode Activated",
      "url": "/+god-mode-activated",
    },
    Object {
      "amountRaised": 1735,
      "name": "SOBA",
      "url": "/+soba",
    },
    Object {
      "amountRaised": 1725,
      "name": "The Disco Party for the Kids",
      "url": "/+the-disco-party-for-the-kids",
    },
    Object {
      "amountRaised": 1718,
      "name": "The Alpha",
      "url": "/+the-alpha",
    },
    Object {
      "amountRaised": 1710,
      "name": "Team L-Town",
      "url": "/+team-l-town",
    },
    Object {
      "amountRaised": 1686.11,
      "name": "Kinsanity for the Kids 2019",
      "url": "/+kinsanity-for-the-kids-2019",
    },
    Object {
      "amountRaised": 1685,
      "name": "RED RAIDER",
      "url": "/+red-raider",
    },
    Object {
      "amountRaised": 1667.46,
      "name": "Absurve Family",
      "url": "/+absurve-family",
    },
    Object {
      "amountRaised": 1544,
      "name": "Moist",
      "url": "/+moist",
    },
    Object {
      "amountRaised": 1520,
      "name": "Ardent Esports",
      "url": "/+ardent-esports",
    },
    Object {
      "amountRaised": 1520,
      "name": "Realest Guys Network--86bd3208-5927-4015-80b2-e2a01f83ca8c",
      "url": "/+realest-guys-network-86bd3208-5927-4015-80b2-e2a01f83ca8c",
    },
    Object {
      "amountRaised": 1500,
      "name": "Team Mischievous",
      "url": "/+team-mischievous",
    },
    Object {
      "amountRaised": 1488,
      "name": "TwitchCon Charity Zone 2015",
      "url": "/+twitchcon-charity-zone-2015",
    },
    Object {
      "amountRaised": 1477.15,
      "name": "DAM BUGS",
      "url": "/+dam-bugs",
    },
    Object {
      "amountRaised": 1445,
      "name": "Dungeons & Flagons--72cd2057-1cf6-41c8-8c2d-8c09a3c9f82b",
      "url": "/+dungeons-flagons-72cd2057-1cf6-41c8-8c2d-8c09a3c9f82b",
    },
    Object {
      "amountRaised": 1313,
      "name": "Twitch Memphis Community Meetup",
      "url": "/+twitch-memphis-community-meetup",
    },
    Object {
      "amountRaised": 1289.61,
      "name": "WitchDoctorXera",
      "url": "/+witchdoctorxera",
    },
    Object {
      "amountRaised": 1215.01,
      "name": "Ambush",
      "url": "/+ambush",
    },
    Object {
      "amountRaised": 1207,
      "name": "Beccville",
      "url": "/+beccville",
    },
    Object {
      "amountRaised": 1206,
      "name": "Stream Dream Team ",
      "url": "/+stream-dream-team",
    },
    Object {
      "amountRaised": 1156,
      "name": "Buttered Poptarts Part Deux",
      "url": "/+buttered-poptarts-part-deux",
    },
    Object {
      "amountRaised": 1155,
      "name": "Trials of Play Live",
      "url": "/+trials-of-play-live",
    },
    Object {
      "amountRaised": 1138,
      "name": "Team Soshul Gamers",
      "url": "/+team-soshul-gamers",
    },
    Object {
      "amountRaised": 1133.66,
      "name": "Gamers for Children's Health",
      "url": "/+gamers-for-children-s-health",
    },
    Object {
      "amountRaised": 1115,
      "name": "RetroBlockParty",
      "url": "/+retroblockparty",
    },
    Object {
      "amountRaised": 1100,
      "name": "Hobbit Day",
      "url": "/+hobbit-day",
    },
    Object {
      "amountRaised": 1084.11,
      "name": "The Casuals",
      "url": "/+the-casuals",
    },
    Object {
      "amountRaised": 1073,
      "name": "Arctix's Cool Stream Club for the kids!",
      "url": "/+arctix-s-cool-stream-club-for-the-kids",
    },
    Object {
      "amountRaised": 1055,
      "name": "Holo Nation Gaming",
      "url": "/+holo-nation-gaming",
    },
    Object {
      "amountRaised": 1050,
      "name": "MMDR GuardianCon 2018",
      "url": "/+mmdr-guardiancon-2018",
    },
    Object {
      "amountRaised": 1035,
      "name": "CSV Main Team",
      "url": "/+csv-main-team",
    },
    Object {
      "amountRaised": 939.12,
      "name": "The Last Minuters",
      "url": "/+the-last-minuters",
    },
    Object {
      "amountRaised": 930,
      "name": "Karnedge for the kids!",
      "url": "/+karnedge-for-the-kids",
    },
    Object {
      "amountRaised": 920,
      "name": "<A Reddit Dystopia>",
      "url": "/+a-reddit-dystopia-398de5a7-8412-4286-ba9e-8a3e6a78b162",
    },
    Object {
      "amountRaised": 915,
      "name": "Gamers4Charity",
      "url": "/+gamers4charity",
    },
    Object {
      "amountRaised": 911,
      "name": "Esports One",
      "url": "/+esports-one",
    },
    Object {
      "amountRaised": 901.87,
      "name": "UTDEsports",
      "url": "/+utdesports",
    },
    Object {
      "amountRaised": 886.73,
      "name": "Cayde's Sweatiest Spicy Noodles Against Cancer",
      "url": "/+cayde-s-sweatiest-spicy-noodles-against-cancer",
    },
    Object {
      "amountRaised": 882.66,
      "name": "Twitch Hawaii",
      "url": "/+twitch-hawaii",
    },
    Object {
      "amountRaised": 872,
      "name": "Mixer's Guardians of the Little Lights",
      "url": "/+mixer-s-guardians-of-the-little-lights",
    },
    Object {
      "amountRaised": 804,
      "name": "2wenty & Friends",
      "url": "/+2wenty-friends",
    },
    Object {
      "amountRaised": 802,
      "name": "Spectrum",
      "url": "/+spectrum",
    },
    Object {
      "amountRaised": 786,
      "name": "R.A.H Brigade --01ff7e22-9131-4c57-a213-01bd3104c963",
      "url": "/+r-a-h-brigade-01ff7e22-9131-4c57-a213-01bd3104c963",
    },
    Object {
      "amountRaised": 760,
      "name": "Gamers For Good--e3d57f39-0b8c-4955-8eed-1006a5e081ab",
      "url": "/+gamers-for-good-e3d57f39-0b8c-4955-8eed-1006a5e081ab",
    },
    Object {
      "amountRaised": 745,
      "name": "The Yoga Ballers",
      "url": "/+the-yoga-ballers",
    },
    Object {
      "amountRaised": 713,
      "name": "Guardians of The Technodrome",
      "url": "/+guardians-of-the-technodrome",
    },
    Object {
      "amountRaised": 705,
      "name": "The Jolly Rogers",
      "url": "/+the-jolly-rogers",
    },
    Object {
      "amountRaised": 687.29,
      "name": "Kindred Strong",
      "url": "/+kindred-strong",
    },
    Object {
      "amountRaised": 630,
      "name": "Team Prism",
      "url": "/+team-prism",
    },
    Object {
      "amountRaised": 622,
      "name": "The Magic of Friendship",
      "url": "/+the-magic-of-friendship",
    },
    Object {
      "amountRaised": 613,
      "name": "Not So Super Squad",
      "url": "/+not-so-super-squad",
    },
    Object {
      "amountRaised": 610.9,
      "name": "HadokenxGaming Community",
      "url": "/+hadokenxgaming-community",
    },
    Object {
      "amountRaised": 587,
      "name": "International Gamers--ea5900fb-d40a-4f42-95b3-a7763292a596",
      "url": "/+international-gamers-ea5900fb-d40a-4f42-95b3-a7763292a596",
    },
    Object {
      "amountRaised": 575,
      "name": "Above it All--ea932f9a-0a27-43e6-801c-04905d20d81c",
      "url": "/+above-it-all-ea932f9a-0a27-43e6-801c-04905d20d81c",
    },
    Object {
      "amountRaised": 561,
      "name": "Magical Gamers",
      "url": "/+magical-gamers",
    },
    Object {
      "amountRaised": 551,
      "name": "PhelpsGG & Squad",
      "url": "/+phelpsgg-squad",
    },
    Object {
      "amountRaised": 550,
      "name": "Gamer Squad",
      "url": "/+gamer-squad",
    },
    Object {
      "amountRaised": 550,
      "name": "Power Word Give",
      "url": "/+power-word-give",
    },
    Object {
      "amountRaised": 550,
      "name": "Rogues and Baku",
      "url": "/+rogues-and-baku",
    },
    Object {
      "amountRaised": 546,
      "name": "Feruun's St. Jude Team",
      "url": "/+feruun-s-st-jude-team",
    },
    Object {
      "amountRaised": 540,
      "name": "Heroes Never Die!",
      "url": "/+heroes-never-die",
    },
    Object {
      "amountRaised": 531,
      "name": "The Avowed 2019",
      "url": "/+the-avowed-2019",
    },
    Object {
      "amountRaised": 521,
      "name": "Cancel Cancer",
      "url": "/+cancel-cancer",
    },
    Object {
      "amountRaised": 510,
      "name": "The Arcaders",
      "url": "/+the-arcaders",
    },
    Object {
      "amountRaised": 500,
      "name": "BeyondGaming",
      "url": "/+beyondgaming",
    },
    Object {
      "amountRaised": 482,
      "name": "Gamers For Good",
      "url": "/+gamers-for-good",
    },
    Object {
      "amountRaised": 460,
      "name": "Blue Esports",
      "url": "/+blue-esports",
    },
    Object {
      "amountRaised": 432,
      "name": "TheMistakeMakers",
      "url": "/+themistakemakers",
    },
    Object {
      "amountRaised": 427,
      "name": "BlaBlaDesGardiens",
      "url": "/+blabladesgardiens",
    },
    Object {
      "amountRaised": 390,
      "name": "Never Say Dice",
      "url": "/+never-say-dice",
    },
    Object {
      "amountRaised": 390,
      "name": "The X Zone @Twitch Community ",
      "url": "/+the-x-zone-twitch-community",
    },
    Object {
      "amountRaised": 380,
      "name": "UNITed Mercs",
      "url": "/+united-mercs",
    },
    Object {
      "amountRaised": 370,
      "name": "Apple Employees Giving",
      "url": "/+apple-employees-giving",
    },
    Object {
      "amountRaised": 369,
      "name": "LURK24",
      "url": "/+lurk24",
    },
    Object {
      "amountRaised": 360,
      "name": "Destiny Dads",
      "url": "/+destiny-dads",
    },
    Object {
      "amountRaised": 355,
      "name": "RebornKnights",
      "url": "/+rebornknights",
    },
    Object {
      "amountRaised": 351.58,
      "name": "Badass Brigade ",
      "url": "/+badass-brigade",
    },
    Object {
      "amountRaised": 350.13,
      "name": "KSS For Change",
      "url": "/+kss-for-change",
    },
    Object {
      "amountRaised": 340,
      "name": "Rangers of the Last Guard",
      "url": "/+rangers-of-the-last-guard",
    },
    Object {
      "amountRaised": 330,
      "name": "The Bombardiers",
      "url": "/+the-bombardiers",
    },
    Object {
      "amountRaised": 315,
      "name": "ZILLA SQUAD",
      "url": "/+zilla-squad",
    },
    Object {
      "amountRaised": 306,
      "name": "Team Multiverse",
      "url": "/+team-multiverse",
    },
    Object {
      "amountRaised": 305,
      "name": "GucciGems",
      "url": "/+guccigems",
    },
    Object {
      "amountRaised": 300,
      "name": "BeerdedGaming",
      "url": "/+beerdedgaming",
    },
    Object {
      "amountRaised": 300,
      "name": "TeamUwU",
      "url": "/+teamuwu",
    },
    Object {
      "amountRaised": 300,
      "name": "Terrible Listeners",
      "url": "/+terrible-listeners",
    },
    Object {
      "amountRaised": 297,
      "name": "Silent Knights",
      "url": "/+silent-knights",
    },
    Object {
      "amountRaised": 290,
      "name": "Cypher's Nat 20's",
      "url": "/+cypher-s-nat-20-s",
    },
    Object {
      "amountRaised": 275,
      "name": "LAG Squad",
      "url": "/+lag-squad",
    },
    Object {
      "amountRaised": 270,
      "name": "CASTorDIE",
      "url": "/+castordie",
    },
    Object {
      "amountRaised": 270,
      "name": "extRAIDvaganza",
      "url": "/+extraidvaganza",
    },
    Object {
      "amountRaised": 258,
      "name": "Backwoodz Gaming",
      "url": "/+backwoodz-gaming",
    },
    Object {
      "amountRaised": 255,
      "name": "Krakens Wrath",
      "url": "/+krakens-wrath",
    },
    Object {
      "amountRaised": 250,
      "name": "Gamers For Life",
      "url": "/+gamers-for-life",
    },
    Object {
      "amountRaised": 210,
      "name": "Erox Gaming Ltd",
      "url": "/+erox-gaming-ltd",
    },
    Object {
      "amountRaised": 210,
      "name": "The Bearcat Fund",
      "url": "/+the-bearcat-fund",
    },
    Object {
      "amountRaised": 200.25,
      "name": "Vyrok Gaming",
      "url": "/+vyrok-gaming",
    },
    Object {
      "amountRaised": 200,
      "name": "Deep Winter",
      "url": "/+deep-winter",
    },
    Object {
      "amountRaised": 200,
      "name": "Gaming Warriors",
      "url": "/+gaming-warriors",
    },
    Object {
      "amountRaised": 190,
      "name": "Velocity",
      "url": "/+velocity",
    },
    Object {
      "amountRaised": 188.66,
      "name": "Kreateure",
      "url": "/+kreateure",
    },
    Object {
      "amountRaised": 180,
      "name": "Final February ",
      "url": "/+final-february",
    },
    Object {
      "amountRaised": 171,
      "name": "Fortnite For The Kidz",
      "url": "/+fortnite-for-the-kidz",
    },
    Object {
      "amountRaised": 170,
      "name": "Circle of Friends Creating Hope for the Future",
      "url": "/+circle-of-friends-creating-hope-for-the-future",
    },
    Object {
      "amountRaised": 165.5,
      "name": "/r/Pokemon",
      "url": "/+r-pokemon",
    },
    Object {
      "amountRaised": 162,
      "name": "Video Game Vanguards--08cfe118-b920-47ef-8d6a-87b5c77e8502",
      "url": "/+video-game-vanguards-08cfe118-b920-47ef-8d6a-87b5c77e8502",
    },
    Object {
      "amountRaised": 155,
      "name": "Infinibees",
      "url": "/+infinibees",
    },
    Object {
      "amountRaised": 153,
      "name": "The Northern Front",
      "url": "/+the-northern-front",
    },
    Object {
      "amountRaised": 150,
      "name": "1912 Titanic Swim Team",
      "url": "/+1912-titanic-swim-team",
    },
    Object {
      "amountRaised": 130,
      "name": "Wingman for the Kids",
      "url": "/+wingman-for-the-kids",
    },
    Object {
      "amountRaised": 126.38,
      "name": "The Elite Uno",
      "url": "/+the-elite-uno",
    },
    Object {
      "amountRaised": 125,
      "name": "DLive Community for Guardian Con",
      "url": "/+dlive-community-for-guardian-con",
    },
    Object {
      "amountRaised": 125,
      "name": "Onyx Fills The Fridge",
      "url": "/+onyx-fills-the-fridge",
    },
    Object {
      "amountRaised": 120,
      "name": "Scope Gaming X Team Killer",
      "url": "/+scope-gaming-x-team-killer",
    },
    Object {
      "amountRaised": 120,
      "name": "Wolf Pack--b0606133-7bd9-44fe-8a63-9b9ca0bc9982",
      "url": "/+wolf-pack-b0606133-7bd9-44fe-8a63-9b9ca0bc9982",
    },
    Object {
      "amountRaised": 105,
      "name": "Scrub Squad",
      "url": "/+scrub-squad",
    },
    Object {
      "amountRaised": 102,
      "name": "POOPGames",
      "url": "/+poopgames",
    },
    Object {
      "amountRaised": 100.11,
      "name": "Famiraye",
      "url": "/+famiraye",
    },
    Object {
      "amountRaised": 100,
      "name": "Jello Jigglers",
      "url": "/+jello-jigglers",
    },
    Object {
      "amountRaised": 100,
      "name": "TeeNation",
      "url": "/+teenation",
    },
    Object {
      "amountRaised": 100,
      "name": "The Forgotten Soldiers",
      "url": "/+the-forgotten-soldiers",
    },
    Object {
      "amountRaised": 100,
      "name": "The Warren Clan",
      "url": "/+the-warren-clan",
    },
    Object {
      "amountRaised": 95,
      "name": "Plebs R Us",
      "url": "/+plebs-r-us",
    },
    Object {
      "amountRaised": 95,
      "name": "VMW--25473675-d9eb-479d-815c-4ba70942f439",
      "url": "/+vmw-25473675-d9eb-479d-815c-4ba70942f439",
    },
    Object {
      "amountRaised": 90,
      "name": "Depth Esports ",
      "url": "/+depth-esports",
    },
    Object {
      "amountRaised": 75,
      "name": "Marithon",
      "url": "/+marithon",
    },
    Object {
      "amountRaised": 71,
      "name": "Charged For Charity",
      "url": "/+charged-for-charity",
    },
    Object {
      "amountRaised": 70,
      "name": "Sandbox 4 Charity",
      "url": "/+sandbox-4-charity",
    },
    Object {
      "amountRaised": 68,
      "name": "Gaming Broadcasters",
      "url": "/+gaming-broadcasters",
    },
    Object {
      "amountRaised": 65,
      "name": "House of Cards Gaming",
      "url": "/+house-of-cards-gaming",
    },
    Object {
      "amountRaised": 62,
      "name": "RedVacktor",
      "url": "/+redvacktor",
    },
    Object {
      "amountRaised": 61,
      "name": "SGG Team",
      "url": "/+sgg-team",
    },
    Object {
      "amountRaised": 61,
      "name": "team Keef and Gry",
      "url": "/+team-keef-and-gry",
    },
    Object {
      "amountRaised": 55,
      "name": "MidwestRP",
      "url": "/+midwestrp",
    },
    Object {
      "amountRaised": 55,
      "name": "The Clan-C",
      "url": "/+the-clan-c",
    },
    Object {
      "amountRaised": 50,
      "name": "Live Support Stream",
      "url": "/+live-support-stream",
    },
    Object {
      "amountRaised": 50,
      "name": "Obtenebration Network",
      "url": "/+obtenebration-network",
    },
    Object {
      "amountRaised": 45,
      "name": "Lucky Ace Gaming",
      "url": "/+lucky-ace-gaming",
    },
    Object {
      "amountRaised": 35,
      "name": "Sweetbees ",
      "url": "/+sweetbees",
    },
    Object {
      "amountRaised": 35,
      "name": "The Broadway Stream Team",
      "url": "/+the-broadway-stream-team",
    },
    Object {
      "amountRaised": 35,
      "name": "The Dancefloor--eb43cab9-0028-4f02-8a82-46cf768483c1",
      "url": "/+the-dancefloor-eb43cab9-0028-4f02-8a82-46cf768483c1",
    },
    Object {
      "amountRaised": 30,
      "name": "Proper Gamers",
      "url": "/+proper-gamers",
    },
    Object {
      "amountRaised": 26.53,
      "name": "Streams For Life",
      "url": "/+streams-for-life",
    },
    Object {
      "amountRaised": 26,
      "name": "RedditTryHard",
      "url": "/+reddittryhard",
    },
    Object {
      "amountRaised": 25,
      "name": "Nerd901",
      "url": "/+nerd901",
    },
    Object {
      "amountRaised": 25,
      "name": "PapaPotato360&creativecreations89",
      "url": "/+papapotato360-creativecreations89",
    },
    Object {
      "amountRaised": 22,
      "name": "Team Midnight Gaming",
      "url": "/+team-midnight-gaming",
    },
    Object {
      "amountRaised": 21,
      "name": "Zombies ",
      "url": "/+zombies",
    },
    Object {
      "amountRaised": 20,
      "name": "Casuals Vs Cancer",
      "url": "/+casuals-vs-cancer",
    },
    Object {
      "amountRaised": 20,
      "name": "Gecko Swarm for St. Jude PLAYLIVE 2020",
      "url": "/+gecko-swarm-for-st-jude-playlive-2020",
    },
    Object {
      "amountRaised": 20,
      "name": "IRBGamer",
      "url": "/+irbgamer",
    },
    Object {
      "amountRaised": 20,
      "name": "#LetsCureCancer",
      "url": "/+letscurecancer",
    },
    Object {
      "amountRaised": 20,
      "name": "Navi Health DOG",
      "url": "/+navi-health-dog",
    },
    Object {
      "amountRaised": 20,
      "name": "One Of Us Charity Crew",
      "url": "/+one-of-us-charity-crew",
    },
    Object {
      "amountRaised": 20,
      "name": "Zombiecat Community",
      "url": "/+zombiecat-community",
    },
    Object {
      "amountRaised": 15,
      "name": "PhoenixTTV",
      "url": "/+phoenixttv",
    },
    Object {
      "amountRaised": 15,
      "name": "Spiritual Jedi Order",
      "url": "/+spiritual-jedi-order",
    },
    Object {
      "amountRaised": 13.37,
      "name": "IMAGINE ALL THE PEOPLE [iATp]",
      "url": "/+imagine-all-the-people-iatp",
    },
    Object {
      "amountRaised": 12,
      "name": "Synergos Community",
      "url": "/+synergos-community",
    },
    Object {
      "amountRaised": 11.92,
      "name": "Las Vegas Streamers",
      "url": "/+las-vegas-streamers",
    },
    Object {
      "amountRaised": 10.7,
      "name": "Kitchen Kings for Charity",
      "url": "/+kitchen-kings-for-charity",
    },
    Object {
      "amountRaised": 10,
      "name": "Dare2Decal ",
      "url": "/+dare2decal",
    },
    Object {
      "amountRaised": 10,
      "name": "Team Ten Toes for St Jude",
      "url": "/+team-ten-toes-for-st-jude",
    },
    Object {
      "amountRaised": 10,
      "name": "The God Squad ",
      "url": "/+the-god-squad",
    },
    Object {
      "amountRaised": 10,
      "name": "ZooSKWAD--a99020fb-6885-41f8-a291-bc681d4f125e",
      "url": "/+zooskwad-a99020fb-6885-41f8-a291-bc681d4f125e",
    },
    Object {
      "amountRaised": 5,
      "name": "Hopeless Guardians",
      "url": "/+hopeless-guardians",
    },
    Object {
      "amountRaised": 5,
      "name": "Nectarbees",
      "url": "/+nectarbees",
    },
    Object {
      "amountRaised": 5,
      "name": "UnderdogSquad",
      "url": "/+underdogsquad",
    },
    Object {
      "amountRaised": 3,
      "name": "Gankstars",
      "url": "/+gankstars",
    },
    Object {
      "amountRaised": 3,
      "name": "Jennikins and Sheeps Gaming For The Kids",
      "url": "/+jennikins-and-sheeps-gaming-for-the-kids",
    },
    Object {
      "amountRaised": 1,
      "name": "Sailing For Charity",
      "url": "/+sailing-for-charity",
    },
    Object {
      "amountRaised": 1,
      "name": "Team ReaPer",
      "url": "/+team-reaper",
    },
  ],
}
`;

exports[`cause tests - correct Tiltify cause permissions returned 1`] = `
Object {
  "activated": true,
  "adminApiEnabled": true,
  "adminBrandingColors": false,
  "adminBrandingDetails": false,
  "adminBrandingEnabled": true,
  "adminBrandingImages": false,
  "adminEnabled": true,
  "adminFinanceEnabled": true,
  "adminGeneralEnabled": true,
  "adminIntegrationsEnabled": true,
  "adminVisibilityEnabled": true,
  "causeLeaderboard": true,
  "customizedDonationForm": true,
  "dashboardChart": true,
  "dashboardEnabled": true,
  "fundraisingEventsEnabled": true,
  "fundraisingEventsGeneralColors": true,
  "fundraisingEventsGeneralDetails": true,
  "fundraisingEventsGeneralEnabled": true,
  "fundraisingEventsGeneralImages": false,
  "fundraisingEventsIncentives": true,
  "fundraisingEventsLeaderboard": true,
  "fundraisingEventsMultipleActive": true,
  "fundraisingEventsRegistrationEnabled": true,
  "fundraisingEventsReporting": false,
  "fundraisingEventsReportingCampaigns": false,
  "fundraisingEventsReportingDonations": false,
  "fundraisingEventsReportingFundraisers": false,
  "fundraisingEventsSchedule": true,
  "fundraisingEventsUnlimitedActive": true,
  "fundraisingEventsVisibilityDetails": true,
  "fundraisingEventsVisibilityEnabled": true,
  "fundraisingEventsVisibilityLeaderboards": true,
  "giftAid": true,
  "globalRewardsEnabled": true,
  "heatindexLeaderboards": true,
  "managementEnabled": true,
  "monthlyGivingRewards": true,
  "regions": false,
  "regionsFilter": false,
  "reportingCampaigns": true,
  "reportingChart": true,
  "reportingDonations": true,
  "reportingEnabled": true,
  "reportingFundraisers": true,
  "reportingGlobalRewards": true,
  "reportingSustainedGiving": true,
  "sustainedGivingEnabled": true,
}
`;

exports[`cause tests - correct Tiltify cause returned 1`] = `
Object {
  "about": "* St. Jude Children's Research Hospital is leading the way the
world understands, treats and defeats childhood cancer and other
life-threatening diseases.  
* Your support helps ensure that families never receive a bill
from St. Jude for treatment, travel, housing or food -- because all a family
should worry about is helping their child live.  
* St. Jude has helped push the childhood cancer survival rate
from less than 20% when we opened to 80% today. We won't stop until no child
dies from cancer.",
  "address": Object {
    "addressLine1": "501 St. Jude Place",
    "addressLine2": "",
    "city": "Memphis",
    "country": "United States",
    "postalCode": "38105",
    "region": "Tennessee",
  },
  "amazonPayConnected": true,
  "avatar": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/cause/avatar/35/st-jude-children-s-research-hospital-avatar-1573159170626.png",
    "width": 64,
  },
  "banner": Object {
    "alt": "",
    "height": 530,
    "src": "https://assets.tiltify.com/uploads/cause/banner/35/st-jude-children-s-research-hospital-banner-1491406190935.jpg",
    "width": 1440,
  },
  "contactEmail": "playlive@stjude.org",
  "edd": true,
  "giftAidConnected": false,
  "governmentId": null,
  "id": 35,
  "image": Object {
    "alt": "",
    "height": 360,
    "src": "https://assets.tiltify.com/uploads/cause/image/35/media_graphic.png",
    "width": 640,
  },
  "legalName": "ST JUDE CHILDRENS RESEARCH HOSPITAL INC",
  "logo": Object {
    "alt": "",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/cause/logo/35/st-jude-children-s-research-hospital-logo-1573159181958.jpg",
    "width": 100,
  },
  "mailchimpConnected": false,
  "name": "St. Jude Children's Research Hospital ",
  "paypalCurrencyCode": "USD",
  "paypalEmail": "playlive@stjude.org",
  "paypalGivingFundConnected": false,
  "paypalMarketplaceConnected": true,
  "phoneNumber": "",
  "planTier": 4,
  "settings": Object {
    "colors": Object {
      "background": "#fff",
      "highlight": "#ce2f40",
    },
    "findOutMoreLink": "https://stjude.org/get-involved/at-play/video-game-charity-event.html#getstarted",
    "footerCopyright": "© Copyright 2017. St. Jude Children's Research Hospital, a not-for-profit, section 501 (c)(3) corporation. 
St. Jude Children's Research Hospital/ ALSAC, 501 St. Jude Place, Memphis, TN 38105 USA",
    "footerLinks": Object {
      "coppa": "http://fundraising.stjude.org/site/PageServer?pagename=COPPA",
      "privacyPolicy": null,
      "termsAndConditions": null,
    },
    "headerIntro": "Start a fundraising campaign to help us end childhood cancer.",
    "headerTitle": "St. Jude Children's Research Hospital",
    "loading": false,
    "social": null,
  },
  "slug": "st-jude-children-s-research-hospital",
  "social": Object {
    "facebook": "stjude",
    "instagram": "stjude",
    "twitter": "stjudeplaylive",
    "youtube": "MyStJude",
  },
  "status": "published",
  "stripeConnected": true,
  "type": "Cause",
  "video": "https://www.youtube.com/watch?v=yqUDZKEltC0",
}
`;

exports[`cause tests - correct Tiltify cause visibility options returned 1`] = `
Object {
  "donate": Object {
    "visible": true,
  },
  "giftAid": Object {
    "visible": false,
  },
  "individualLeaderboard": Object {
    "type": "ALL",
    "visible": true,
  },
  "regions": Object {
    "visible": false,
  },
  "regionsFilter": Object {
    "visible": false,
  },
  "teamLeaderboard": Object {
    "type": "ALL",
    "visible": true,
  },
}
`;
